--- a/MPfm/MPfm.iOS/XIB/iPad/SelectPlaylistViewController_iPad.xib
+++ b/MPfm/MPfm.iOS/XIB/iPad/SelectPlaylistViewController_iPad.xib
@@ -7,6 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SelectPlaylistViewController">
             <connections>
                 <outlet property="view" destination="2" id="3"/>
+                <outlet property="viewPanel" destination="E0S-ud-1SI" id="Zkd-sR-x12"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -64,7 +65,7 @@
                             </state>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" red="0.12549019610000001" green="0.15686274510000001" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.12549019610000001" green="0.15686274510000001" blue="0.18039215689999999" alpha="0.5" colorSpace="calibratedRGB"/>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
