--- a/MPfm/MPfm.iOS/XIB/iPhone/SelectPlaylistViewController_iPhone.xib
+++ b/MPfm/MPfm.iOS/XIB/iPhone/SelectPlaylistViewController_iPhone.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
@@ -11,6 +11,7 @@
                 <outlet property="btnSelect" destination="HPC-aT-QbC" id="hDk-un-SSu"/>
                 <outlet property="tableView" destination="18w-xf-5Z1" id="SJ8-KJ-u8e"/>
                 <outlet property="view" destination="1" id="3"/>
+                <outlet property="viewPanel" destination="u6a-hr-Zvm" id="IwD-V3-Ngj"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -77,7 +78,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" red="0.12549019607843137" green="0.15686274509803921" blue="0.1803921568627451" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.12549019610000001" green="0.15686274510000001" blue="0.18039215689999999" alpha="0.5" colorSpace="calibratedRGB"/>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
