iOS: Added panels for easier view switching in ResumePlaybackViewController. Added layout for iPad (still have to fix rotation issues).

--- a/MPfm/MPfm.iOS/XIB/iPad/StartResumePlaybackViewController_iPad.xib
+++ b/MPfm/MPfm.iOS/XIB/iPad/StartResumePlaybackViewController_iPad.xib
@@ -118,7 +118,7 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </imageView>
                     </subviews>
-                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.70000000000000007" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.12549019610000001" green="0.15686274510000001" blue="0.18039215689999999" alpha="0.5" colorSpace="calibratedRGB"/>
                 </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.84999999999999998" colorSpace="calibratedWhite"/>
