--- a/MPfm/MPfm.iOS/XIB/iPad/PlayerViewController_iPad.xib
+++ b/MPfm/MPfm.iOS/XIB/iPad/PlayerViewController_iPad.xib
@@ -32,19 +32,19 @@
             <rect key="frame" x="0.0" y="64" width="768" height="960"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4">
                     <rect key="frame" x="0.0" y="150" width="768" height="733"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="12">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="12">
                             <rect key="frame" x="0.0" y="0.0" width="768" height="733"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         </imageView>
-                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="13">
+                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="13">
                             <rect key="frame" x="0.0" y="0.0" width="768" height="709"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         </scrollView>
-                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="17">
+                        <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="17">
                             <rect key="frame" x="0.0" y="709" width="768" height="24"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <subviews>
@@ -58,13 +58,18 @@
                     </subviews>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstItem="12" firstAttribute="leading" secondItem="4" secondAttribute="leading" id="Ksb-xB-Cdj"/>
-                        <constraint firstItem="13" firstAttribute="leading" secondItem="4" secondAttribute="leading" id="VUu-li-PNe"/>
-                        <constraint firstAttribute="trailing" secondItem="12" secondAttribute="trailing" id="pcP-co-hXx"/>
-                        <constraint firstAttribute="trailing" secondItem="13" secondAttribute="trailing" id="sq2-mW-7qN"/>
+                        <constraint firstAttribute="bottom" secondItem="17" secondAttribute="bottom" id="7Aa-dz-IDg"/>
+                        <constraint firstItem="13" firstAttribute="leading" secondItem="4" secondAttribute="leading" id="ERq-Dx-1z4"/>
+                        <constraint firstItem="12" firstAttribute="leading" secondItem="4" secondAttribute="leading" id="OMv-b3-ttb"/>
+                        <constraint firstAttribute="bottom" secondItem="13" secondAttribute="bottom" constant="24" id="OXC-Mi-VeV"/>
+                        <constraint firstAttribute="trailing" secondItem="12" secondAttribute="trailing" id="Q3q-dA-Lcw"/>
+                        <constraint firstAttribute="bottom" secondItem="12" secondAttribute="bottom" id="Q9c-h5-daJ"/>
+                        <constraint firstAttribute="trailing" secondItem="13" secondAttribute="trailing" id="QPO-r2-0x4"/>
+                        <constraint firstItem="13" firstAttribute="top" secondItem="4" secondAttribute="top" id="iwt-Yh-Xak"/>
+                        <constraint firstItem="12" firstAttribute="top" secondItem="4" secondAttribute="top" id="taX-SA-7Lx"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5">
+                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5" userLabel="Position View">
                     <rect key="frame" x="0.0" y="0.0" width="768" height="28"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
@@ -93,7 +98,7 @@
                             <rect key="frame" x="76" y="0.0" width="610" height="23"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         </slider>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="00:00.000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" ambiguous="YES" misplaced="YES" text="00:00.000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10">
                             <rect key="frame" x="692" y="1" width="66" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
@@ -102,8 +107,11 @@
                         </label>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.40000000000000002" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="10" secondAttribute="trailing" constant="10" id="ag4-xH-LrV"/>
+                    </constraints>
                 </view>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6" customClass="MPfmWaveFormScrollView">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6" userLabel="WaveFormScrollView" customClass="MPfmWaveFormScrollView">
                     <rect key="frame" x="0.0" y="24" width="768" height="128"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                 </scrollView>
@@ -197,16 +205,18 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="4" firstAttribute="top" secondItem="2" secondAttribute="top" constant="150" id="21Z-yX-Xnr"/>
                 <constraint firstAttribute="centerX" secondItem="kLq-Aa-pB9" secondAttribute="centerX" id="5Lm-db-aBf"/>
-                <constraint firstItem="4" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="CyQ-a5-BdO"/>
-                <constraint firstAttribute="trailing" secondItem="4" secondAttribute="trailing" id="Eoz-LK-lbo"/>
-                <constraint firstAttribute="trailing" secondItem="4" secondAttribute="trailing" id="J5e-Wj-tGL"/>
-                <constraint firstItem="4" firstAttribute="top" secondItem="5" secondAttribute="bottom" constant="122" id="JBS-pd-1yp"/>
+                <constraint firstAttribute="bottom" secondItem="4" secondAttribute="bottom" constant="77" id="EaN-fi-nUQ"/>
+                <constraint firstAttribute="trailing" secondItem="6" secondAttribute="trailing" id="NE8-B9-P36"/>
                 <constraint firstItem="5" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="QPh-4B-k0D"/>
-                <constraint firstAttribute="bottom" secondItem="4" secondAttribute="bottom" constant="77" id="Ulq-HF-pim"/>
+                <constraint firstItem="6" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="RbY-yA-JWl"/>
                 <constraint firstAttribute="bottom" secondItem="kLq-Aa-pB9" secondAttribute="bottom" id="XNa-pd-GCF"/>
                 <constraint firstAttribute="trailing" secondItem="5" secondAttribute="trailing" id="Xbp-YS-ZnO"/>
-                <constraint firstItem="4" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="jzt-OF-Z5i"/>
+                <constraint firstItem="6" firstAttribute="top" secondItem="2" secondAttribute="top" constant="24" id="ZzY-EU-X30"/>
+                <constraint firstItem="kLq-Aa-pB9" firstAttribute="top" secondItem="4" secondAttribute="bottom" constant="-1" id="avd-zp-IfI"/>
+                <constraint firstAttribute="trailing" secondItem="4" secondAttribute="trailing" id="krf-lc-weg"/>
+                <constraint firstItem="4" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="tKk-wh-2Re"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
